--- a/config/JustAnotherSpawner/ImportedSpawnlists.cfg
+++ b/config/JustAnotherSpawner/ImportedSpawnlists.cfg
@@ -14713,29 +14713,16 @@
       "net.lomeli.ec.entity.EntityFriendlyCreeper: [1, 1->2]"
     ],
     "monster": [
-      "net.lomeli.ec.entity.EntityFireCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntityWaterCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntityElectricCreeper: [10, 1->3]",
+      "net.minecraft.entity.monster.EntityEnderman: [1, 1->4]",
+      "net.minecraft.entity.monster.EntityZombie: [5, 1->4]",
+      "net.minecraft.entity.monster.EntitySkeleton: [5, 1->4]",
+      "twilightforest.entity.EntityTFMistWolf: [10, 1->4]",
+      "twilightforest.entity.EntityTFSkeletonDruid: [10, 1->4]",
+      "twilightforest.entity.EntityTFKingSpider: [10, 1->4]",
+      "twilightforest.entity.EntityTFKobold: [10, 4->8]",
+      "net.minecraft.entity.monster.EntityWitch: [1, 1->1]",
       "net.lomeli.ec.entity.EntityCookieCreeper: [10, 1->2]",
-      "net.lomeli.ec.entity.EntityDarkCreeper: [2, 1->3]",
-      "net.lomeli.ec.entity.EntityLightCreeper: [4, 1->3]",
-      "net.lomeli.ec.entity.EntityEarthCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntityReverseCreeper: [6, 1->1]",
-      "net.lomeli.ec.entity.EntityIceCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntityPsyhicCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntitySpiderCreeper: [8, 1->3]",
-      "net.lomeli.ec.entity.EntityWindCreeper: [10, 1->2]",
-      "net.lomeli.ec.entity.EntityHydrogenCreeper: [1, 1->1]",
-      "net.lomeli.ec.entity.EntityEnderCreeper: [4, 1->2]",
-      "net.lomeli.ec.entity.EntityStoneCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntitySolarCreeper: [4, 1->1]",
-      "net.lomeli.ec.entity.EntityBirthdayCreeper: [2, 1->3]",
-      "net.lomeli.ec.entity.EntityFireworkCreeper: [8, 1->3]",
-      "net.lomeli.ec.entity.EntityBigBadCreep: [1, 1->1]",
-      "tconstruct.world.entity.BlueSlime: [1, 4->20]",
-      "net.lomeli.ec.entity.addon.EntityEUCreeper: [10, 1->4]",
-      "net.lomeli.ec.entity.addon.EntityRFCreeper: [10, 1->4]",
-      "crazypants.enderzoo.entity.EntityEnderminy: [30, 1->3]"
+      "net.lomeli.ec.entity.EntityFireworkCreeper: [8, 1->3]"
     ]
   },
   "twilightforest.biomes.TFBiomeDarkForestCenter.Dark Forest Center": {
@@ -14757,50 +14744,19 @@
       "net.lomeli.ec.entity.EntityFriendlyCreeper: [1, 1->2]"
     ],
     "monster": [
-      "net.lomeli.ec.entity.EntityFireCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntityFireCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntityWaterCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntityWaterCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntityElectricCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntityCookieCreeper: [10, 1->2]",
-      "net.lomeli.ec.entity.EntityCookieCreeper: [10, 1->2]",
-      "net.lomeli.ec.entity.EntityDarkCreeper: [2, 1->3]",
-      "net.lomeli.ec.entity.EntityDarkCreeper: [2, 1->3]",
-      "net.lomeli.ec.entity.EntityLightCreeper: [4, 1->3]",
-      "net.lomeli.ec.entity.EntityLightCreeper: [4, 1->3]",
-      "net.lomeli.ec.entity.EntityEarthCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntityEarthCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntityReverseCreeper: [6, 1->1]",
-      "net.lomeli.ec.entity.EntityReverseCreeper: [6, 1->1]",
-      "net.lomeli.ec.entity.EntityIceCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntityIceCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntityPsyhicCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntityPsyhicCreeper: [10, 1->3]",
+      "net.minecraft.entity.monster.EntityEnderman: [1, 1->4]",
+      "net.minecraft.entity.monster.EntityZombie: [5, 1->4]",
+      "net.minecraft.entity.monster.EntitySkeleton: [5, 1->4]",
+      "twilightforest.entity.EntityTFMistWolf: [10, 1->4]",
+      "twilightforest.entity.EntityTFSkeletonDruid: [10, 1->4]",
+      "twilightforest.entity.EntityTFKingSpider: [10, 1->4]",
+      "twilightforest.entity.EntityTFKobold: [10, 4->8]",
+      "net.minecraft.entity.monster.EntityWitch: [1, 1->1]",
       "net.lomeli.ec.entity.EntityIllusionCreeper: [6, 1->1]",
       "net.lomeli.ec.entity.EntitySpiderCreeper: [8, 1->3]",
-      "net.lomeli.ec.entity.EntitySpiderCreeper: [8, 1->3]",
       "net.lomeli.ec.entity.EntityWindCreeper: [10, 1->2]",
-      "net.lomeli.ec.entity.EntityWindCreeper: [10, 1->2]",
-      "net.lomeli.ec.entity.EntityHydrogenCreeper: [1, 1->1]",
-      "net.lomeli.ec.entity.EntityHydrogenCreeper: [1, 1->1]",
-      "net.lomeli.ec.entity.EntityEnderCreeper: [4, 1->2]",
-      "net.lomeli.ec.entity.EntityEnderCreeper: [4, 1->2]",
-      "net.lomeli.ec.entity.EntityStoneCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntityStoneCreeper: [10, 1->3]",
-      "net.lomeli.ec.entity.EntitySolarCreeper: [4, 1->1]",
-      "net.lomeli.ec.entity.EntitySolarCreeper: [4, 1->1]",
-      "net.lomeli.ec.entity.EntityBirthdayCreeper: [2, 1->3]",
-      "net.lomeli.ec.entity.EntityBirthdayCreeper: [2, 1->3]",
-      "net.lomeli.ec.entity.EntityFireworkCreeper: [8, 1->3]",
-      "net.lomeli.ec.entity.EntityFireworkCreeper: [8, 1->3]",
-      "net.lomeli.ec.entity.EntityBigBadCreep: [1, 1->1]",
-      "net.lomeli.ec.entity.EntityBigBadCreep: [1, 1->1]",
-      "tconstruct.world.entity.BlueSlime: [1, 4->20]",
-      "net.lomeli.ec.entity.addon.EntityEUCreeper: [10, 1->4]",
-      "net.lomeli.ec.entity.addon.EntityEUCreeper: [10, 1->4]",
-      "net.lomeli.ec.entity.addon.EntityRFCreeper: [10, 1->4]",
-      "net.lomeli.ec.entity.addon.EntityRFCreeper: [10, 1->4]",
-      "crazypants.enderzoo.entity.EntityEnderminy: [30, 1->3]"
+      "thaumcraft.common.entities.monster.EntityPech: [10, 1->1]",
+      "net.lomeli.ec.entity.addon.EntityRFCreeper: [10, 1->4]"
     ]
   },
   "twilightforest.biomes.TFBiomeDeepMushrooms.Deep Mushroom Forest": {
