--- a/config/elementalcreepers.cfg
+++ b/config/elementalcreepers.cfg
@@ -1,5 +1,4 @@
 # Configuration file
-
 ##########################################################################################################
 # explosion-configuration
 #--------------------------------------------------------------------------------------------------------#
@@ -86,10 +85,10 @@ general {
     I:cookiesDropped=5
 
     # Enable dome explosions (instead of random block placement explosions) [default: false]
-    B:domeExplosion=false
+    B:domeExplosion=true
 
     # Allows special rendering during certain events. [default: true]
-    B:special=true
+    B:special=false
 }
 
 
